[gd_scene load_steps=8 format=3 uid="uid://dkr0n2g0dhdvp"]

[ext_resource type="Script" path="res://pieces.gd" id="1_vhd1v"]

[sub_resource type="CanvasTexture" id="CanvasTexture_fhioa"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ijrdi"]
specular_color = Color(0.866667, 0.137255, 0.137255, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8b44i"]
size = Vector2(122, 122)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g87ot"]
size = Vector2(8, 16)

[sub_resource type="Curve2D" id="Curve2D_2isi7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -61, 0, 0, 0, 0, 0, 61, 0)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_uhur6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 61, 0, 0, 0, 0, 0, -61, 0)
}
point_count = 2

[node name="Straight" type="Area2D"]
script = ExtResource("1_vhd1v")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.65098, 0.501961, 0.980392, 1)
scale = Vector2(122, 122)
texture = SubResource("CanvasTexture_fhioa")

[node name="Sprite2D3" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(0.0165398, -9.40862e-05)
rotation = 1.5708
scale = Vector2(17.478, 122)
texture = SubResource("CanvasTexture_ijrdi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8b44i")

[node name="FirstEntry" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FirstEntry"]
position = Vector2(-57, 0)
shape = SubResource("RectangleShape2D_g87ot")

[node name="SecondEntry" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SecondEntry"]
position = Vector2(57, 0)
shape = SubResource("RectangleShape2D_g87ot")

[node name="FirstPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_2isi7")

[node name="Path1" type="PathFollow2D" parent="FirstPath"]
unique_name_in_owner = true
position = Vector2(-61, 0)

[node name="SecondPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_uhur6")

[node name="Path2" type="PathFollow2D" parent="SecondPath"]
unique_name_in_owner = true
position = Vector2(61, 0)
rotation = 3.14159

[connection signal="body_entered" from="FirstEntry" to="." method="_on_first_entry_body_entered"]
[connection signal="body_entered" from="SecondEntry" to="." method="_on_second_entry_body_entered"]
